2004-05-20  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b132

	* Change: Revert xhtml

2004-05-20  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b131

	* Change: docType() now returns XHTML 1.0 Transitional

	* Change: Beginning of translation to XHTML 1.0 Transitional
	  albums.php validates, when albumTree is turned off

2004-05-19  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b130

	* Change: Add missing text to phpBB2 manual-howto

	* Change: Descriptive text for find_orphans

2004-05-19  Jens Tkotz <jens@peino.de>  1.4.4-cvs-b129

	* New: Album title, photo and movie captions are now links in view_album.

2004-05-18  Christian Mohn <h0bbel@p0ggel.org>  1.4.4-cvs-b128
	
	* Fix: Changed view_photo.php to show the photoname, and not the index if there
	  is no custom field called Title 

	* Vanity: Added myself to AUTHORS. :)

2004-05-18  Jens Tkotz <jens@peino.de>  1.4.4-cvs-b127

	* Fix: Use of htmlentities(unhtmlentities()) for Alttext of photos

2004-05-18  Jens Tkotz <jens@peino.de>  1.4.4-cvs-b126

	* Fix: Added missing global $gallery in function itemLastCommentDate($i)

	* New: Applied idea of Patch #869056

	* New: Added possibility to have additional Attributes for the link on photos.

	* Change: removed unused(?) code in view_photo ($openAnchor)

	* Fix: Use of unhtmlentities() for Alttext of photos

	* Change: Only put metatag with keyword(s) if there we have keyword(s)

2004-05-17  Don Willingham <donwillingham@users.sf.net>  1.4.4-cvs-b125

	* Fix: [View comments] links were disabled even when comments
	  existed in a (sub)album if "Indicate if there are comments
	  available" config option was set to photos and probably off.

	* Change: Pass $gallery->app->comments_indication_verbose as a
	  parameter so some calls to lastCommentDate() can use "no" to see
	  if comments exist.

2004-05-17  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b124

	* Change: Rewrite of getNextPhoto() by Adventure