@@ -1,3 +1,13 @@
+2004-05-21  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b133
+
+	* Change: Add a check to available_skins() to fix URLs when 
+	  photoAlbumURL isn't set yet
+
+	* Change: Un-hide devMode in the Technical section of the
+	  config wizard, with a warning for non-PHP-savvy users
+
+	* Change: Fix typo in config wizard text
+
 2004-05-20  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b132
 
 	* Change: Revert xhtml
